--- a/index.html
+++ b/index.html
@@ -5,11 +5,64 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
+  <title>Sheryl Lawrence // Web Developer</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
+  <!-- Header (for name with bold text) -->
+  <header class="header">
+    <h1>Sheryl <strong>Lawrence</strong></h1>
+    <nav class="text-right">
+      <!-- Unordered list -->
+      <ul>
+        <li> <a href="#about-me">About Me</a> </li>
+        <li> <a href="#work">Work</a> </li>
+        <li> <a href="#contact-me">Contact Me</a> </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h2 class="text-left">About Me</h2>
+    <figure>
+      <img src="./assets/images/image-1.png" alt="Graphic with Coming Soon text">
+      <figcaption class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</figcaption>
+    </figure>
+    <section id="contact">
+      <h2 class="text-left">Work</h2>
+      
+      <!--<form>
+        <ul>
+          <li>
+            <label class="text-right" for="name">Name:</label>
+            <input type="text" id="name" name="user-name">
+          </li>
+          <li>
+            <label class="text-right" for="email">Email:</label>
+            <input type="text" id="email" name="user-email">
+          </li>
+        </ul>
+        <div class="text-center">
+          <button type="submit">SEND</button>
+        </div>
+      </form> -->
+    <h2 class="text-left">Contact Me</h2>
+    </section>
+  </main>
+
+  <!-- Footer with unordered list of contact information -->
+  <footer class="text-right">
+    <ul>
+      <li> 647.334.1763  </li>
+      <li> s_lawrence0@yahoo.ca </li>
+      <li> <a href="https://github.com/slawcode/sheryl-lawrence-portfolio.git">Github</a></li>
+    </ul>
+  </footer>
+    
+</body>
+</html>
+
 </body>
 
 </html>
