html code added minor css and README info

--- a/index.html
+++ b/index.html
@@ -23,16 +23,31 @@
     </nav>
   </header>
 
+  <!-- Body -->
   <main>
-    <h2 class="text-left">About Me</h2>
-    <figure>
+    <section>
+      <nav id="#about-me">
+      class="about-me">
+      <h2 class="text-left">About Me</h2>
+      <p>Hi, I am a student currently enrolled with the University of Toronto's Coding Bootcamp. I am two weeks into the bootcamp and am eager to learn everything there is to know about web development, but I am enjoying the journey! I hope to constantly learn and grow throughout the next 22 remaining weeks, and beyond from there. I am excited to constantly improve this portfolio as my web development skills progress and have this be a reflection. I aspire to use this protfolio in the future as an aid in my job search and to showcase my skills to future emplyers. </p> 
+
+      <p> Some things I love are exercise, music, food and everything and anything to do with fashion and beauty! I hope that as my CSS knowledge and skills progress I can implement those into designs and creativity...REWORD!</p>
+      </nav>
+    <section>
+    <!-- <figure>
       <img src="./assets/images/image-1.png" alt="Graphic with Coming Soon text">
       <figcaption class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</figcaption>
-    </figure>
-    <section id="contact">
+    </figure> -->
+    <section>
+      <nav id="work">
       <h2 class="text-left">Work</h2>
-      
-      <!--<form>
+        <!--<ul> -->
+          <p> <a href="https://slawcode.github.io/prework-study-guide/"> Visit my first coding project!</a></p>
+          <p> <a href="https://slawcode.github.io/assignment-1/"> Visit my second coding project!</a></p>
+        <!--</ul> -->
+      </nav>
+    </section>
+      <!-- <form>
         <ul>
           <li>
             <label class="text-right" for="name">Name:</label>
@@ -47,14 +62,18 @@
           <button type="submit">SEND</button>
         </div>
       </form> -->
-    <h2 class="text-left">Contact Me</h2>
+    
+    <section>
+      <nav id="contact-me">
+      <h2 class="text-left">Contact Me</h2>
+      </nav>
     </section>
   </main>
 
   <!-- Footer with unordered list of contact information -->
   <footer class="text-right">
     <ul>
-      <li> 647.334.1763  </li>
+      <li> 647.334.1763 </li>
       <li> s_lawrence0@yahoo.ca </li>
       <li> <a href="https://github.com/slawcode/sheryl-lawrence-portfolio.git">Github</a></li>
     </ul>
