picture and more css added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Header (for name with bold text) -->
   <header class="header">
-    <h1>Sheryl <strong>Lawrence</strong></h1>
+    <h1>Sheryl <span class="last-name">LAWRENCE</span> </h1>
     <nav class="text-right">
       <!-- Unordered list -->
       <ul>
@@ -23,22 +23,25 @@
     </nav>
   </header>
 
-  <!-- Body -->
   <main>
+    <!-- Avatar -->
+    <section class="picture">
+      <figure>
+      <img src="./assets/images/pink-flowers-avatar.jpg" alt="pink roses" class="subtitle">
+      <figcaption class="container" class="bottom-right">I am learning coding, slowly but surely!</figcaption>
+      <!--<p class="container" I am learning coding, slowly but surely!> </p> -->
+      </figure>
     <section>
-      <nav id="#about-me">
-      class="about-me">
+
+    <section>
+      <nav id="about-me">
       <h2 class="text-left">About Me</h2>
-      <p>Hi, I am a student currently enrolled with the University of Toronto's Coding Bootcamp. I am two weeks into the bootcamp and am eager to learn everything there is to know about web development, but I am enjoying the journey! I hope to constantly learn and grow throughout the next 22 remaining weeks, and beyond from there. I am excited to constantly improve this portfolio as my web development skills progress and have this be a reflection. I aspire to use this protfolio in the future as an aid in my job search and to showcase my skills to future emplyers. </p> 
+      <p>Hi, I am a student currently enrolled with the University of Toronto's Coding Bootcamp. I am two weeks into the bootcamp and am eager to learn everything there is to know about web development, but I am enjoying the journey! I hope to constantly learn and grow throughout the next 22 remaining weeks, and beyond from there. I am excited to improve this portfolio as my web development skills progress and have this be a reflection of that. I will use this protfolio in the future as an tool in my job search to showcase my coding skills to future employers. </p> 
 
       <p> Some things I love are exercise, music, food and everything and anything to do with fashion and beauty! I hope that as my CSS knowledge and skills progress I can implement those into designs and creativity...REWORD!</p>
       </nav>
-    <section>
-    <!-- <figure>
-      <img src="./assets/images/image-1.png" alt="Graphic with Coming Soon text">
-      <figcaption class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</figcaption>
-    </figure> -->
-    <section>
+    
+      <section>
       <nav id="work">
       <h2 class="text-left">Work</h2>
         <!--<ul> -->
