text over picture and reference added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="picture">
       <figure>
       <img src="./assets/images/pink-flowers-avatar.jpg" alt="pink roses" class="subtitle">
-      <figcaption class="container" class="bottom-right">I am learning coding, slowly but surely!</figcaption>
+      <figcaption class="bottom-right">I am learning coding, slowly but surely!</figcaption>
       <!--<p class="container" I am learning coding, slowly but surely!> </p> -->
       </figure>
     <section>
@@ -44,10 +44,10 @@
       <section>
       <nav id="work">
       <h2 class="text-left">Work</h2>
-        <!--<ul> -->
+        <ul> 
           <p> <a href="https://slawcode.github.io/prework-study-guide/"> Visit my first coding project!</a></p>
           <p> <a href="https://slawcode.github.io/assignment-1/"> Visit my second coding project!</a></p>
-        <!--</ul> -->
+        </ul>
       </nav>
     </section>
       <!-- <form>
