--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
       </figure>
     <section>
 
-    <section>
+    <section class="content">
       <nav id="about-me">
       <h2 class="text-left">About Me</h2>
-      <p>Hi, I am a student currently enrolled with the University of Toronto's Coding Bootcamp. I am two weeks into the bootcamp and am eager to learn everything there is to know about web development, but I am enjoying the journey! I hope to constantly learn and grow throughout the next 22 remaining weeks, and beyond from there. I am excited to improve this portfolio as my web development skills progress and have this be a reflection of that. I will use this protfolio in the future as an tool in my job search to showcase my coding skills to future employers. </p> 
-
-      <p> Some things I love are exercise, music, food and everything and anything to do with fashion and beauty! I hope that as my CSS knowledge and skills progress I can implement those into designs and creativity...REWORD!</p>
+        <p>Hi, I am a student currently enrolled with the University of Toronto's Coding Bootcamp. I am two weeks into the bootcamp and am eager to learn everything there is to know about web development, but I am enjoying the journey! I hope to constantly learn and grow throughout the next 22 remaining weeks, and beyond from there. I am excited to improve this portfolio as my web development skills progress and have this be a reflection of that. I will use this protfolio in the future as an tool in my job search to showcase my coding skills to future employers. </p> 
       </nav>
-    
+      <span></span>
       <section>
       <nav id="work">
       <h2 class="text-left">Work</h2>
