css edits and comments added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <!-- Header (for name with bold text) -->
+  <!-- Header -->
   <header class="header">
-    <h1>Sheryl <span class="last-name">LAWRENCE</span> </h1>
+    <h1>Sheryl LAWRENCE </h1>
     <nav class="text-right">
       <!-- Unordered list -->
       <ul>
@@ -27,31 +27,36 @@
     <!-- Avatar -->
     <section class="picture">
       <figure>
-      <img src="./assets/images/pink-flowers-avatar.jpg" alt="pink roses" class="subtitle">
-      <figcaption class="bottom-right">I am learning coding, slowly but surely!</figcaption>
-      <!--<p class="container" I am learning coding, slowly but surely!> </p> -->
+        <img src="./assets/images/pink-flowers-avatar.jpg" alt="pink roses" class="subtitle">
+        <figcaption class="bottom-right">I am learning coding, slowly but surely!</figcaption>
       </figure>
     <section>
 
+    <!-- Main content with text -->
     <section class="content">
       <nav id="about-me">
+      <!-- About me section -->
       <h2 class="text-left">About Me</h2>
-        <p>Hi, I am a student currently enrolled with the University of Toronto's Coding Bootcamp. I am two weeks into the bootcamp and am eager to learn everything there is to know about web development, but I am enjoying the journey! I hope to constantly learn and grow throughout the remaining 22 weeks, and beyond from there. I am excited to improve this portfolio as my web development skills progress and have this be a reflection of that progression. I will use this protfolio in the future as an tool in my job search to showcase my coding skills to future employers. </p> 
+        <p>Hi, I am a student currently enrolled with the University of Toronto's Coding Bootcamp. I am two weeks into the bootcamp and am eager to learn everything there is to know about web development, but I am enjoying the journey! I hope to constantly learn and grow throughout the remaining 22 weeks, and beyond from there. I am excited to improve this portfolio as my web development skills progress and have this be a reflection of that progression. I will use this protfolio in the future as a tool in my job search to showcase my coding skills to future employers. </p> 
       </nav>
   
       <section>
       <nav id="work">
+      <!-- Work section -->
       <h2 class="text-left">Work</h2>
+      <!-- Unordered list -->
         <ul> 
-          <p> <a href="https://slawcode.github.io/prework-study-guide/"> Visit my first coding project!</a></p>
-          <p> <a href="https://slawcode.github.io/assignment-1/"> Visit my second coding project!</a></p>
+          <li> <a href="https://slawcode.github.io/prework-study-guide/"> Visit my first coding project!</a></li>
+          <li> <a href="https://slawcode.github.io/assignment-1/"> Visit my second coding project!</a></li>
         </ul>
       </nav>
     </section>
      
     <section>
       <nav id="contact-me">
+      <!-- Contact me section -->
       <h2 class="text-left">Contact Me</h2>
+      <!-- Unordered list -->
         <ul>
          <li> 647.334.1763 </li>
          <li> s_lawrence0@yahoo.ca </li>
@@ -73,6 +78,8 @@
         <li> <a href="https://github.com/slawcode/sheryl-lawrence-portfolio.git">Github</a></li>
       </ul>
   </footer> -->
-    
+
+<!-- Closing tags -->   
 </body>
+
 </html>
