--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="picture">
       <figure>
         <img src="./assets/images/pink-flowers-avatar.jpg" alt="pink roses" class="subtitle">
-        <figcaption class="bottom-right">I am learning coding, slowly but surely!</figcaption>
+        <figcaption class="bottom-right">I am learning to code, slowly but surely!</figcaption>
       </figure>
     <section>
 
